--- a/.github/blank.yml
+++ b/.github/blank.yml
@@ -1,9 +1,19 @@
 name: Generate Datas
 
+
 on:
   schedule: # execute every 8 hours
     - cron: "* */8 * * *"
   workflow_dispatch:
+    inputs:
+      name:
+        description: 'Person to greet'
+        required: true
+        default: 'Mona the Octocat'
+      home:
+        description: 'location'
+        required: false
+        default: 'The Octoverse'
 
 jobs:
   build:
